--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		    <div class="col">
 			  <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
-                  <a class="navbar-brand we" href="#"><img src="image/logo.png"></a>
+                  <a class="navbar-brand we" href="#"><img src="image/Logo.png"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -345,7 +345,7 @@
 		    <div class="row">
 			  <div class="col-12 col-md-4 col-sm-6">
 			    <div class="apart pb-3 d-flex align-items-center">
-				  <div class="img-5"><img src="image/logo1.png"></div>
+				  <div class="img-5"><img src="image/Logo1.png"></div>
 				  <div class="floor">
 				    <h4 class="we-1">We Guard</h4>
 				   </div>
